--- a/1P/style.css
+++ b/1P/style.css
@@ -5,13 +5,14 @@
 }
 
  body{
-    border: 8px solid rgb(10, 10, 32);
-    background-color: rgb(225, 225, 255);
+    border: 8px solid #4198c7;
+    background-color: #95CFEE;
 }
 
 #container{
     max-width: 900px;
     margin: 0 auto;
+    padding: 0  8px;
 }
 
 header {
@@ -25,6 +26,7 @@ img {
     width: 30%;
     height: 30%;
     border-radius: 50%;
+    border: 2px solid white;
 }
 
 #name {
@@ -32,12 +34,21 @@ img {
 }
 
 #name h1{
-    font-size: 2.5em;
+    font-size: 6rem;
+    letter-spacing: 0.5rem;
+}
+
+#name h2 {
+    font-size: 3.5rem;
 }
 
 #about h2 {
     padding: 28px 0px;
-    font-size: 4rem;
+    font-size: 3.5rem;
+}
+
+#name p {
+    font-size: 1.5rem;
 }
 
 #about p{
@@ -57,4 +68,19 @@ footer {
     text-align: end;
     word-spacing: 0.1rem;
     margin-bottom: 20px;
+}
+
+@media (max-width:720px) {
+    #name h1{
+        font-size: 3.5em;
+        letter-spacing: 0.5rem;
+    }
+    
+    #name h2 {
+        font-size: 2rem;
+    }
+
+    #name p {
+        font-size: 1rem;
+    }
 }
